--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./styles.css">
     <title>Document</title>
 </head>
 
 <body>
+
+    <button class="btn btn--succes btn--loading" >
+        <span class="btn__not-loading-text">Text Btn</span>
+        <span class="btn__loading-text">Loading...</span>
+    </button>
 <script src="./script.js"></script>
 </body>
 
