--- a/index.html
+++ b/index.html
@@ -10,11 +10,27 @@
 </head>
 
 <body>
+    <header>
+        <h1>Tamagochi Pets</h1>
+    </header>
+    <main>
+        <form id="create-pet" action="">
+            <input id="PetName" type="text" name="PetName"> PetName<br>
+            <button id="submitPet" type="submit">Create Pet</button>
+        </form>
+        <section>
+            <div>Pet name:<span></span></div>
+            <div>Pet food:<span></span></div>
+            <div>Pet water:<span></span></div>
+            <div>Pet happyiness:<span></span></div>
+            <div>Pet fatigue:<span></span></div>
+            <div>Pet level:<span></span></div>
+            <div>Is dead:<span></span></div>
+        </section>
+    </main>
+    <footer>
 
-    <button class="btn btn--succes btn--loading" >
-        <span class="btn__not-loading-text">Text Btn</span>
-        <span class="btn__loading-text">Loading...</span>
-    </button>
+    </footer>
 <script src="./script.js"></script>
 </body>
 
