--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
         <button id="sbm-form">Create Pet</button>
     </form>
 </div>
-<div id="pets">
+<div id="pets2">
 
 </div>
-<script src="./script.js"></script>
+<!-- <script src="./script.js"></script> -->
+<script src="./model.js"></script>
+<script src="./view.js"></script>
+<script src="./ctrl.js"></script>
 <script>
 
 </script>
