fixed the posibility to add multiple pets

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <button id="sbm-form">Create Pet</button>
     </form>
 </div>
-<div id="pets2">
+<div id="pets">
 
 </div>
 <!-- <script src="./script.js"></script> -->
