--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
     <title>Document</title>
 </head>
 
@@ -16,6 +17,7 @@
         <button id="sbm-form">Create Pet</button>
     </form>
 </div>
+<h2 style="text-align: center">My pets</h2>
 <div id="pets">
 
 </div>
