--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 
 </div>
 <!-- <script src="./script.js"></script> -->
-<script src="./model.js"></script>
-<script src="./view.js"></script>
-<script src="./ctrl.js"></script>
+<script src="./dist/model.js"></script>
+<script src="./dist/view.js"></script>
+<script src="./dist/ctrl.js"></script>
 <script>
 
 </script>
