added quoting pets

--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 <body>
 <div class="pet-creation">
     <form>
-        <input type="text" id="pet-name"><br>
-        <button id="sbm-form">Create Pet</button>
+        <button id="sbm-form">Create quoting Pet</button>
     </form>
 </div>
-<h2 style="text-align: center">My pets</h2>
+<h2 style="text-align: center">My quoting pets</h2>
 <div id="pets">
 
 </div>
-<!-- <script src="./script.js"></script> -->
+<script src="./dist/http.js"></script>
+<script src="./dist/dataService.js"></script>
 <script src="./dist/model.js"></script>
 <script src="./dist/view.js"></script>
 <script src="./dist/ctrl.js"></script>
